examples/c/error-codes/undefined/UB-STDARG10-bad-static.output
UB-STDARG10-bad-static.c:5:37: error: address of register variable requested
  (__kcc_va_start((&(ap)), ((void*)(&(x)))));
                                    ^ ~
1 error generated.
